exports[`cases from pugneum sources > include-extends-from-root.pg 1`] = `
{
  "type": "Block",
  "nodes": [
    {
      "type": "Block",
      "nodes": [
        {
          "type": "Tag",
          "name": "html",
          "block": {
            "type": "Block",
            "nodes": [
              {
                "type": "Tag",
                "name": "head",
                "block": {
                  "type": "Block",
                  "nodes": [
                    {
                      "type": "Tag",
                      "name": "title",
                      "block": {
                        "type": "Block",
                        "nodes": [
                          {
                            "type": "Text",
                            "val": "My Application"
                          }
                        ]
                      },
                      "attrs": [],
                      "attributeBlocks": [],
                      "isInline": false
                    },
                    {
                      "type": "Block",
                      "nodes": []
                    }
                  ]
                },
                "attrs": [],
                "attributeBlocks": [],
                "isInline": false
              },
              {
                "type": "Tag",
                "name": "body",
                "block": {
                  "type": "Block",
                  "nodes": [
                    {
                      "type": "Block",
                      "nodes": [
                        {
                          "type": "Block",
                          "nodes": [
                            {
                              "type": "Tag",
                              "name": "h1",
                              "block": {
                                "type": "Block",
                                "nodes": [
                                  {
                                    "type": "Text",
                                    "val": "hello"
                                  }
                                ]
                              },
                              "attrs": [],
                              "attributeBlocks": [],
                              "isInline": false
                            }
                          ]
                        }
                      ]
                    }
                  ]
                },
                "attrs": [],
                "attributeBlocks": [],
                "isInline": false
              }
            ]
          },
          "attrs": [],
          "attributeBlocks": [],
          "isInline": false
        }
      ]
    }
  ]
}
`;

exports[`cases from pugneum sources > include-extends-of-common-template.pg 1`] = `
{
  "type": "Block",
  "nodes": [
    {
      "type": "Block",
      "nodes": [
        {
          "type": "Block",
          "nodes": [
            {
              "type": "Tag",
              "name": "div",
              "block": {
                "type": "Block",
                "nodes": [
                  {
                    "type": "Text",
                    "val": "test1"
                  }
                ]
              },
              "attrs": [],
              "attributeBlocks": [],
              "isInline": false
            }
          ]
        }
      ]
    },
    {
      "type": "Block",
      "nodes": [
        {
          "type": "Block",
          "nodes": [
            {
              "type": "Tag",
              "name": "div",
              "block": {
                "type": "Block",
                "nodes": [
                  {
                    "type": "Text",
                    "val": "test2"
                  }
                ]
              },
              "attrs": [],
              "attributeBlocks": [],
              "isInline": false
            }
          ]
        }
      ]
    }
  ]
}
`;

exports[`cases from pugneum sources > include-extends-relative.pg 1`] = `
{
  "type": "Block",
  "nodes": [
    {
      "type": "Block",
      "nodes": [
        {
          "type": "Tag",
          "name": "html",
          "block": {
            "type": "Block",
            "nodes": [
              {
                "type": "Tag",
                "name": "head",
                "block": {
                  "type": "Block",
                  "nodes": [
                    {
                      "type": "Tag",
                      "name": "title",
                      "block": {
                        "type": "Block",
                        "nodes": [
                          {
                            "type": "Text",
                            "val": "My Application"
                          }
                        ]
                      },
                      "attrs": [],
                      "attributeBlocks": [],
                      "isInline": false
                    },
                    {
                      "type": "Block",
                      "nodes": []
                    }
                  ]
                },
                "attrs": [],
                "attributeBlocks": [],
                "isInline": false
              },
              {
                "type": "Tag",
                "name": "body",
                "block": {
                  "type": "Block",
                  "nodes": [
                    {
                      "type": "Block",
                      "nodes": [
                        {
                          "type": "Block",
                          "nodes": [
                            {
                              "type": "Tag",
                              "name": "h1",
                              "block": {
                                "type": "Block",
                                "nodes": [
                                  {
                                    "type": "Text",
                                    "val": "hello"
                                  }
                                ]
                              },
                              "attrs": [],
                              "attributeBlocks": [],
                              "isInline": false
                            }
                          ]
                        }
                      ]
                    }
                  ]
                },
                "attrs": [],
                "attributeBlocks": [],
                "isInline": false
              }
            ]
          },
          "attrs": [],
          "attributeBlocks": [],
          "isInline": false
        }
      ]
    }
  ]
}
`;

exports[`cases from pugneum sources > include-filter-stylus.pg 1`] = `
{
  "type": "Block",
  "nodes": [
    {
      "type": "Tag",
      "name": "style",
      "block": {
        "type": "Block",
        "nodes": [
          {
            "type": "RawInclude",
            "file": {
              "type": "FileReference",
              "path": "some.styl",
              "str": "@import \\"some-included\\"\\n"
            },
            "filters": [
              {
                "type": "IncludeFilter",
                "name": "stylus",
                "attrs": []
              }
            ]
          }
        ]
      },
      "attrs": [
        {
          "name": "type",
          "val": "text/css"
        }
      ],
      "attributeBlocks": [],
      "isInline": false
    }
  ]
}
`;

exports[`cases from pugneum sources > include-filter.pg 1`] = `
{
  "type": "Block",
  "nodes": [
    {
      "type": "Tag",
      "name": "html",
      "block": {
        "type": "Block",
        "nodes": [
          {
            "type": "Tag",
            "name": "body",
            "block": {
              "type": "Block",
              "nodes": [
                {
                  "type": "RawInclude",
                  "file": {
                    "type": "FileReference",
                    "path": "some.md",
                    "str": "Just _some_ markdown **tests**.\\n\\nWith new line.\\n"
                  },
                  "filters": [
                    {
                      "type": "IncludeFilter",
                      "name": "markdown-it",
                      "attrs": []
                    }
                  ]
                },
                {
                  "type": "Tag",
                  "name": "script",
                  "block": {
                    "type": "Block",
                    "nodes": [
                      {
                        "type": "RawInclude",
                        "file": {
                          "type": "FileReference",
                          "path": "include-filter-coffee.coffee",
                          "str": "math =\\n  square: (value) -> value * value\\n"
                        },
                        "filters": [
                          {
                            "type": "IncludeFilter",
                            "name": "coffee-script",
                            "attrs": [
                              {
                                "name": "minify",
                                "val": "true"
                              }
                            ]
                          }
                        ]
                      }
                    ]
                  },
                  "attrs": [],
                  "attributeBlocks": [],
                  "isInline": true
                },
                {
                  "type": "Tag",
                  "name": "script",
                  "block": {
                    "type": "Block",
                    "nodes": [
                      {
                        "type": "RawInclude",
                        "file": {
                          "type": "FileReference",
                          "path": "include-filter-coffee.coffee",
                          "str": "math =\\n  square: (value) -> value * value\\n"
                        },
                        "filters": [
                          {
                            "type": "IncludeFilter",
                            "name": "coffee-script",
                            "attrs": [
                              {
                                "name": "minify",
                                "val": "false"
                              }
                            ]
                          }
                        ]
                      }
                    ]
                  },
                  "attrs": [],
                  "attributeBlocks": [],
                  "isInline": true
                }
              ]
            },
            "attrs": [],
            "attributeBlocks": [],
            "isInline": false
          }
        ]
      },
      "attrs": [],
      "attributeBlocks": [],
      "isInline": false
    }
  ]
}
`;

exports[`cases from pugneum sources > include-only-text-body.pg 1`] = `
{
  "type": "Block",
  "nodes": [
    {
      "type": "Text",
      "val": "The message is \\""
    },
    {
      "type": "YieldBlock"
    },
    {
      "type": "Text",
      "val": "\\""
    }
  ]
}
`;

exports[`cases from pugneum sources > include-only-text.pg 1`] = `
{
  "type": "Block",
  "nodes": [
    {
      "type": "Tag",
      "name": "html",
      "block": {
        "type": "Block",
        "nodes": [
          {
            "type": "Tag",
            "name": "body",
            "block": {
              "type": "Block",
              "nodes": [
                {
                  "type": "Tag",
                  "name": "p",
                  "block": {
                    "type": "Block",
                    "nodes": [
                      {
                        "type": "Block",
                        "nodes": [
                          {
                            "type": "Text",
                            "val": "The message is \\""
                          },
                          {
                            "type": "Block",
                            "nodes": [
                              {
                                "type": "Block",
                                "nodes": [
                                  {
                                    "type": "Tag",
                                    "name": "em",
                                    "block": {
                                      "type": "Block",
                                      "nodes": [
                                        {
                                          "type": "Text",
                                          "val": "hello world"
                                        }
                                      ]
                                    },
                                    "attrs": [],
                                    "attributeBlocks": [],
                                    "isInline": true
                                  }
                                ]
                              }
                            ]
                          },
                          {
                            "type": "Text",
                            "val": "\\""
                          }
                        ]
                      }
                    ]
                  },
                  "attrs": [],
                  "attributeBlocks": [],
                  "isInline": false
                }
              ]
            },
            "attrs": [],
            "attributeBlocks": [],
            "isInline": false
          }
        ]
      },
      "attrs": [],
      "attributeBlocks": [],
      "isInline": false
    }
  ]
}
`;

exports[`cases from pugneum sources > include-with-text-head.pg 1`] = `
{
  "type": "Block",
  "nodes": [
    {
      "type": "Tag",
      "name": "head",
      "block": {
        "type": "Block",
        "nodes": [
          {
            "type": "Tag",
            "name": "script",
            "block": {
              "type": "Block",
              "nodes": [
                {
                  "type": "Text",
                  "val": "alert('hello world');"
                }
              ]
            },
            "attrs": [
              {
                "name": "type",
                "val": "text/javascript"
              }
            ],
            "attributeBlocks": [],
            "isInline": true,
            "textOnly": true
          },
          {
            "type": "YieldBlock"
          }
        ]
      },
      "attrs": [],
      "attributeBlocks": [],
      "isInline": false
    }
  ]
}
`;

exports[`cases from pugneum sources > include-with-text.pg 1`] = `
{
  "type": "Block",
  "nodes": [
    {
      "type": "Tag",
      "name": "html",
      "block": {
        "type": "Block",
        "nodes": [
          {
            "type": "Block",
            "nodes": [
              {
                "type": "Tag",
                "name": "head",
                "block": {
                  "type": "Block",
                  "nodes": [
                    {
                      "type": "Tag",
                      "name": "script",
                      "block": {
                        "type": "Block",
                        "nodes": [
                          {
                            "type": "Text",
                            "val": "alert('hello world');"
                          }
                        ]
                      },
                      "attrs": [
                        {
                          "name": "type",
                          "val": "text/javascript"
                        }
                      ],
                      "attributeBlocks": [],
                      "isInline": true,
                      "textOnly": true
                    },
                    {
                      "type": "Block",
                      "nodes": [
                        {
                          "type": "Block",
                          "nodes": [
                            {
                              "type": "Tag",
                              "name": "script",
                              "block": {
                                "type": "Block",
                                "nodes": []
                              },
                              "attrs": [
                                {
                                  "name": "src",
                                  "val": "/caustic.js"
                                }
                              ],
                              "attributeBlocks": [],
                              "isInline": true
                            },
                            {
                              "type": "Tag",
                              "name": "script",
                              "block": {
                                "type": "Block",
                                "nodes": []
                              },
                              "attrs": [
                                {
                                  "name": "src",
                                  "val": "/app.js"
                                }
                              ],
                              "attributeBlocks": [],
                              "isInline": true
                            }
                          ]
                        }
                      ]
                    }
                  ]
                },
                "attrs": [],
                "attributeBlocks": [],
                "isInline": false
              }
            ]
          }
        ]
      },
      "attrs": [],
      "attributeBlocks": [],
      "isInline": false
    }
  ]
}
`;

exports[`cases from pugneum sources > include.script.pg 1`] = `
{
  "type": "Block",
  "nodes": [
    {
      "type": "Tag",
      "name": "script",
      "block": {
        "type": "Block",
        "nodes": [
          {
            "type": "Block",
            "nodes": [
              {
                "type": "Tag",
                "name": "div",
                "block": {
                  "type": "Block",
                  "nodes": [
                    {
                      "type": "Tag",
                      "name": "h1",
                      "block": {
                        "type": "Block",
                        "nodes": [
                          {
                            "type": "Text",
                            "val": "{{name}}"
                          }
                        ]
                      },
                      "attrs": [],
                      "attributeBlocks": [],
                      "isInline": false
                    },
                    {
                      "type": "Tag",
                      "name": "p",
                      "block": {
                        "type": "Block",
                        "nodes": [
                          {
                            "type": "Text",
                            "val": "{{name}} is a {{species}} that is {{age}} old"
                          }
                        ]
                      },
                      "attrs": [],
                      "attributeBlocks": [],
                      "isInline": false
                    }
                  ]
                },
                "attrs": [
                  {
                    "name": "class",
                    "val": "pet"
                  }
                ],
                "attributeBlocks": [],
                "isInline": false
              }
            ]
          }
        ]
      },
      "attrs": [
        {
          "name": "id",
          "val": "pet-template"
        },
        {
          "name": "type",
          "val": "text/x-template"
        }
      ],
      "attributeBlocks": [],
      "isInline": true
    }
  ]
}
`;

exports[`cases from pugneum sources > include.yield.nested.pg 1`] = `
{
  "type": "Block",
  "nodes": [
    {
      "type": "Block",
      "nodes": [
        {
          "type": "Tag",
          "name": "html",
          "block": {
            "type": "Block",
            "nodes": [
              {
                "type": "Tag",
                "name": "head",
                "block": {
                  "type": "Block",
                  "nodes": [
                    {
                      "type": "Tag",
                      "name": "title",
                      "block": {
                        "type": "Block",
                        "nodes": []
                      },
                      "attrs": [],
                      "attributeBlocks": [],
                      "isInline": false
                    }
                  ]
                },
                "attrs": [],
                "attributeBlocks": [],
                "isInline": false
              },
              {
                "type": "Tag",
                "name": "body",
                "block": {
                  "type": "Block",
                  "nodes": [
                    {
                      "type": "Tag",
                      "name": "h1",
                      "block": {
                        "type": "Block",
                        "nodes": [
                          {
                            "type": "Text",
                            "val": "Page"
                          }
                        ]
                      },
                      "attrs": [],
                      "attributeBlocks": [],
                      "isInline": false
                    },
                    {
                      "type": "Tag",
                      "name": "div",
                      "block": {
                        "type": "Block",
                        "nodes": [
                          {
                            "type": "Tag",
                            "name": "div",
                            "block": {
                              "type": "Block",
                              "nodes": [
                                {
                                  "type": "Block",
                                  "nodes": [
                                    {
                                      "type": "Block",
                                      "nodes": [
                                        {
                                          "type": "Tag",
                                          "name": "p",
                                          "block": {
                                            "type": "Block",
                                            "nodes": [
                                              {
                                                "type": "Text",
                                                "val": "some content"
                                              }
                                            ]
                                          },
                                          "attrs": [],
                                          "attributeBlocks": [],
                                          "isInline": false
                                        },
                                        {
                                          "type": "Tag",
                                          "name": "p",
                                          "block": {
                                            "type": "Block",
                                            "nodes": [
                                              {
                                                "type": "Text",
                                                "val": "and some more"
                                              }
                                            ]
                                          },
                                          "attrs": [],
                                          "attributeBlocks": [],
                                          "isInline": false
                                        }
                                      ]
                                    }
                                  ]
                                }
                              ]
                            },
                            "attrs": [
                              {
                                "name": "id",
                                "val": "content-wrapper"
                              }
                            ],
                            "attributeBlocks": [],
                            "isInline": false
                          }
                        ]
                      },
                      "attrs": [
                        {
                          "name": "id",
                          "val": "content"
                        }
                      ],
                      "attributeBlocks": [],
                      "isInline": false
                    },
                    {
                      "type": "Tag",
                      "name": "div",
                      "block": {
                        "type": "Block",
                        "nodes": [
                          {
                            "type": "Tag",
                            "name": "stuff",
                            "block": {
                              "type": "Block",
                              "nodes": []
                            },
                            "attrs": [],
                            "attributeBlocks": [],
                            "isInline": false
                          }
                        ]
                      },
                      "attrs": [
                        {
                          "name": "id",
                          "val": "footer"
                        }
                      ],
                      "attributeBlocks": [],
                      "isInline": false
                    }
                  ]
                },
                "attrs": [],
                "attributeBlocks": [],
                "isInline": false
              }
            ]
          },
          "attrs": [],
          "attributeBlocks": [],
          "isInline": false
        }
      ]
    }
  ]
}
`;

exports[`cases from pugneum sources > includes-with-ext-js.pg 1`] = `
{
  "type": "Block",
  "nodes": [
    {
      "type": "Tag",
      "name": "pre",
      "block": {
        "type": "Block",
        "nodes": [
          {
            "type": "Tag",
            "name": "code",
            "block": {
              "type": "Block",
              "nodes": [
                {
                  "type": "Text",
                  "val": "var x = '\\\\n here is some \\\\n new lined text';\\n"
                }
              ]
            },
            "attrs": [],
            "attributeBlocks": [],
            "isInline": true
          }
        ]
      },
      "attrs": [],
      "attributeBlocks": [],
      "isInline": false
    }
  ]
}
`;

exports[`cases from pugneum sources > includes.pg 1`] = `
{
  "type": "Block",
  "nodes": [
    {
      "type": "Block",
      "nodes": []
    },
    {
      "type": "Tag",
      "name": "p",
      "block": {
        "type": "Block",
        "nodes": [
          {
            "type": "Text",
            "val": "bar"
          }
        ]
      },
      "attrs": [],
      "attributeBlocks": [],
      "isInline": false
    },
    {
      "type": "Tag",
      "name": "body",
      "block": {
        "type": "Block",
        "nodes": [
          {
            "type": "Text",
            "val": "<p>:)</p>\\n"
          },
          {
            "type": "Text",
            "val": "<script>\\n  console.log(\\"foo\\\\nbar\\")\\n</script>\\n"
          },
          {
            "type": "Tag",
            "name": "script",
            "block": {
              "type": "Block",
              "nodes": [
                {
                  "type": "RawInclude",
                  "file": {
                    "type": "FileReference",
                    "path": "auxiliary/includable.js",
                    "str": "var STRING_SUBSTITUTIONS = {\\n  // table of character substitutions\\n  '\\\\t': '\\\\\\\\t',\\n  '\\\\r': '\\\\\\\\r',\\n  '\\\\n': '\\\\\\\\n',\\n  '\\"': '\\\\\\\\\\"',\\n  '\\\\\\\\': '\\\\\\\\\\\\\\\\',\\n};\\n"
                  },
                  "filters": [
                    {
                      "type": "IncludeFilter",
                      "name": "verbatim",
                      "attrs": []
                    }
                  ]
                }
              ]
            },
            "attrs": [
              {
                "name": "type",
                "val": "text/javascript"
              }
            ],
            "attributeBlocks": [],
            "isInline": true
          }
        ]
      },
      "attrs": [],
      "attributeBlocks": [],
      "isInline": false
    }
  ]
}
`;

exports[`cases from pugneum sources > layout.append.pg 1`] = `
{
  "type": "Block",
  "nodes": [
    {
      "type": "Tag",
      "name": "html",
      "block": {
        "type": "Block",
        "nodes": [
          {
            "type": "NamedBlock",
            "nodes": [
              {
                "type": "Tag",
                "name": "script",
                "block": {
                  "type": "Block",
                  "nodes": []
                },
                "attrs": [
                  {
                    "name": "src",
                    "val": "vendor/jquery.js"
                  }
                ],
                "attributeBlocks": [],
                "isInline": true
              },
              {
                "type": "Tag",
                "name": "script",
                "block": {
                  "type": "Block",
                  "nodes": []
                },
                "attrs": [
                  {
                    "name": "src",
                    "val": "vendor/caustic.js"
                  }
                ],
                "attributeBlocks": [],
                "isInline": true
              },
              {
                "type": "Tag",
                "name": "script",
                "block": {
                  "type": "Block",
                  "nodes": []
                },
                "attrs": [
                  {
                    "name": "src",
                    "val": "app.js"
                  }
                ],
                "attributeBlocks": [],
                "isInline": true
              },
              {
                "type": "Tag",
                "name": "script",
                "block": {
                  "type": "Block",
                  "nodes": []
                },
                "attrs": [
                  {
                    "name": "src",
                    "val": "foo.js"
                  }
                ],
                "attributeBlocks": [],
                "isInline": true
              },
              {
                "type": "Tag",
                "name": "script",
                "block": {
                  "type": "Block",
                  "nodes": []
                },
                "attrs": [
                  {
                    "name": "src",
                    "val": "bar.js"
                  }
                ],
                "attributeBlocks": [],
                "isInline": true
              }
            ],
            "name": "head",
            "mode": "replace"
          },
          {
            "type": "Tag",
            "name": "body",
            "block": {
              "type": "Block",
              "nodes": [
                {
                  "type": "NamedBlock",
                  "nodes": [],
                  "name": "body",
                  "mode": "replace"
                }
              ]
            },
            "attrs": [],
            "attributeBlocks": [],
            "isInline": false
          }
        ]
      },
      "attrs": [],
      "attributeBlocks": [],
      "isInline": false
    }
  ]
}
`;

exports[`cases from pugneum sources > layout.append.without-block.pg 1`] = `
{
  "type": "Block",
  "nodes": [
    {
      "type": "Tag",
      "name": "html",
      "block": {
        "type": "Block",
        "nodes": [
          {
            "type": "NamedBlock",
            "nodes": [
              {
                "type": "Tag",
                "name": "script",
                "block": {
                  "type": "Block",
                  "nodes": []
                },
                "attrs": [
                  {
                    "name": "src",
                    "val": "vendor/jquery.js"
                  }
                ],
                "attributeBlocks": [],
                "isInline": true
              },
              {
                "type": "Tag",
                "name": "script",
                "block": {
                  "type": "Block",
                  "nodes": []
                },
                "attrs": [
                  {
                    "name": "src",
                    "val": "vendor/caustic.js"
                  }
                ],
                "attributeBlocks": [],
                "isInline": true
              },
              {
                "type": "Tag",
                "name": "script",
                "block": {
                  "type": "Block",
                  "nodes": []
                },
                "attrs": [
                  {
                    "name": "src",
                    "val": "app.js"
                  }
                ],
                "attributeBlocks": [],
                "isInline": true
              },
              {
                "type": "Tag",
                "name": "script",
                "block": {
                  "type": "Block",
                  "nodes": []
                },
                "attrs": [
                  {
                    "name": "src",
                    "val": "foo.js"
                  }
                ],
                "attributeBlocks": [],
                "isInline": true
              },
              {
                "type": "Tag",
                "name": "script",
                "block": {
                  "type": "Block",
                  "nodes": []
                },
                "attrs": [
                  {
                    "name": "src",
                    "val": "bar.js"
                  }
                ],
                "attributeBlocks": [],
                "isInline": true
              }
            ],
            "name": "head",
            "mode": "replace"
          },
          {
            "type": "Tag",
            "name": "body",
            "block": {
              "type": "Block",
              "nodes": [
                {
                  "type": "NamedBlock",
                  "nodes": [],
                  "name": "body",
                  "mode": "replace"
                }
              ]
            },
            "attrs": [],
            "attributeBlocks": [],
            "isInline": false
          }
        ]
      },
      "attrs": [],
      "attributeBlocks": [],
      "isInline": false
    }
  ]
}
`;

exports[`cases from pugneum sources > layout.multi.append.prepend.block.pg 1`] = `
{
  "type": "Block",
  "nodes": [
    {
      "type": "NamedBlock",
      "nodes": [
        {
          "type": "Tag",
          "name": "p",
          "block": {
            "type": "Block",
            "nodes": [
              {
                "type": "Text",
                "val": "Last prepend must appear at top"
              }
            ]
          },
          "attrs": [
            {
              "name": "class",
              "val": "last"
            },
            {
              "name": "class",
              "val": "prepend"
            }
          ],
          "attributeBlocks": [],
          "isInline": false
        },
        {
          "type": "Tag",
          "name": "p",
          "block": {
            "type": "Block",
            "nodes": [
              {
                "type": "Text",
                "val": "Something prepended to content"
              }
            ]
          },
          "attrs": [
            {
              "name": "class",
              "val": "first"
            },
            {
              "name": "class",
              "val": "prepend"
            }
          ],
          "attributeBlocks": [],
          "isInline": false
        },
        {
          "type": "Tag",
          "name": "div",
          "block": {
            "type": "Block",
            "nodes": [
              {
                "type": "Text",
                "val": "Defined content"
              }
            ]
          },
          "attrs": [
            {
              "name": "class",
              "val": "content"
            }
          ],
          "attributeBlocks": [],
          "isInline": false
        },
        {
          "type": "Tag",
          "name": "p",
          "block": {
            "type": "Block",
            "nodes": [
              {
                "type": "Text",
                "val": "Something appended to content"
              }
            ]
          },
          "attrs": [
            {
              "name": "class",
              "val": "first"
            },
            {
              "name": "class",
              "val": "append"
            }
          ],
          "attributeBlocks": [],
          "isInline": false
        },
        {
          "type": "Tag",
          "name": "p",
          "block": {
            "type": "Block",
            "nodes": [
              {
                "type": "Text",
                "val": "Last append must be most last"
              }
            ]
          },
          "attrs": [
            {
              "name": "class",
              "val": "last"
            },
            {
              "name": "class",
              "val": "append"
            }
          ],
          "attributeBlocks": [],
          "isInline": false
        }
      ],
      "name": "content",
      "mode": "replace"
    },
    {
      "type": "NamedBlock",
      "nodes": [
        {
          "type": "Tag",
          "name": "script",
          "block": {
            "type": "Block",
            "nodes": []
          },
          "attrs": [
            {
              "name": "src",
              "val": "foo.js"
            }
          ],
          "attributeBlocks": [],
          "isInline": true
        },
        {
          "type": "Tag",
          "name": "script",
          "block": {
            "type": "Block",
            "nodes": []
          },
          "attrs": [
            {
              "name": "src",
              "val": "/app.js"
            }
          ],
          "attributeBlocks": [],
          "isInline": true
        },
        {
          "type": "Tag",
          "name": "script",
          "block": {
            "type": "Block",
            "nodes": []
          },
          "attrs": [
            {
              "name": "src",
              "val": "jquery.js"
            }
          ],
          "attributeBlocks": [],
          "isInline": true
        }
      ],
      "name": "head",
      "mode": "replace"
    }
  ]
}
`;

exports[`cases from pugneum sources > layout.prepend.pg 1`] = `
{
  "type": "Block",
  "nodes": [
    {
      "type": "Tag",
      "name": "html",
      "block": {
        "type": "Block",
        "nodes": [
          {
            "type": "NamedBlock",
            "nodes": [
              {
                "type": "Tag",
                "name": "script",
                "block": {
                  "type": "Block",
                  "nodes": []
                },
                "attrs": [
                  {
                    "name": "src",
                    "val": "foo.js"
                  }
                ],
                "attributeBlocks": [],
                "isInline": true
              },
              {
                "type": "Tag",
                "name": "script",
                "block": {
                  "type": "Block",
                  "nodes": []
                },
                "attrs": [
                  {
                    "name": "src",
                    "val": "bar.js"
                  }
                ],
                "attributeBlocks": [],
                "isInline": true
              },
              {
                "type": "Tag",
                "name": "script",
                "block": {
                  "type": "Block",
                  "nodes": []
                },
                "attrs": [
                  {
                    "name": "src",
                    "val": "app.js"
                  }
                ],
                "attributeBlocks": [],
                "isInline": true
              },
              {
                "type": "Tag",
                "name": "script",
                "block": {
                  "type": "Block",
                  "nodes": []
                },
                "attrs": [
                  {
                    "name": "src",
                    "val": "vendor/jquery.js"
                  }
                ],
                "attributeBlocks": [],
                "isInline": true
              },
              {
                "type": "Tag",
                "name": "script",
                "block": {
                  "type": "Block",
                  "nodes": []
                },
                "attrs": [
                  {
                    "name": "src",
                    "val": "vendor/caustic.js"
                  }
                ],
                "attributeBlocks": [],
                "isInline": true
              }
            ],
            "name": "head",
            "mode": "replace"
          },
          {
            "type": "Tag",
            "name": "body",
            "block": {
              "type": "Block",
              "nodes": [
                {
                  "type": "NamedBlock",
                  "nodes": [],
                  "name": "body",
                  "mode": "replace"
                }
              ]
            },
            "attrs": [],
            "attributeBlocks": [],
            "isInline": false
          }
        ]
      },
      "attrs": [],
      "attributeBlocks": [],
      "isInline": false
    }
  ]
}
`;

exports[`cases from pugneum sources > layout.prepend.without-block.pg 1`] = `
{
  "type": "Block",
  "nodes": [
    {
      "type": "Tag",
      "name": "html",
      "block": {
        "type": "Block",
        "nodes": [
          {
            "type": "NamedBlock",
            "nodes": [
              {
                "type": "Tag",
                "name": "script",
                "block": {
                  "type": "Block",
                  "nodes": []
                },
                "attrs": [
                  {
                    "name": "src",
                    "val": "foo.js"
                  }
                ],
                "attributeBlocks": [],
                "isInline": true
              },
              {
                "type": "Tag",
                "name": "script",
                "block": {
                  "type": "Block",
                  "nodes": []
                },
                "attrs": [
                  {
                    "name": "src",
                    "val": "bar.js"
                  }
                ],
                "attributeBlocks": [],
                "isInline": true
              },
              {
                "type": "Tag",
                "name": "script",
                "block": {
                  "type": "Block",
                  "nodes": []
                },
                "attrs": [
                  {
                    "name": "src",
                    "val": "app.js"
                  }
                ],
                "attributeBlocks": [],
                "isInline": true
              },
              {
                "type": "Tag",
                "name": "script",
                "block": {
                  "type": "Block",
                  "nodes": []
                },
                "attrs": [
                  {
                    "name": "src",
                    "val": "vendor/jquery.js"
                  }
                ],
                "attributeBlocks": [],
                "isInline": true
              },
              {
                "type": "Tag",
                "name": "script",
                "block": {
                  "type": "Block",
                  "nodes": []
                },
                "attrs": [
                  {
                    "name": "src",
                    "val": "vendor/caustic.js"
                  }
                ],
                "attributeBlocks": [],
                "isInline": true
              }
            ],
            "name": "head",
            "mode": "replace"
          },
          {
            "type": "Tag",
            "name": "body",
            "block": {
              "type": "Block",
              "nodes": [
                {
                  "type": "NamedBlock",
                  "nodes": [],
                  "name": "body",
                  "mode": "replace"
                }
              ]
            },
            "attrs": [],
            "attributeBlocks": [],
            "isInline": false
          }
        ]
      },
      "attrs": [],
      "attributeBlocks": [],
      "isInline": false
    }
  ]
}
`;
